--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
             <ul>
                 <li>
                     <a href="/">
-                        <img src="/images/img1.jpg" alt="we do" width="370">
+                        <img src="./images/img1.jpg" alt="we do" width="370">
                     </a>
                 </li>
 
                 <li>
                     <a href="/">
-                        <img src="/images/img2.jpg" alt="we do" width="370">
+                        <img src="./images/img2.jpg" alt="we do" width="370">
                     </a>
                 </li>
 
                 <li>
                     <a href="/">
-                        <img src="/images/img3.jpg" alt="we do" width="370">
+                        <img src="./images/img3.jpg" alt="we do" width="370">
                     </a>
                 </li>
             </ul>
