--- a/index.html
+++ b/index.html
@@ -1,150 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <h1>/</h1>
-            <a href="index.html">
-                <p>webstudio</p>
-            </a>
-
-
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-
-        </nav>
+      <nav>
+        <h1>/</h1>
+        <a href="index.html">
+          <p>webstudio</p>
+        </a>
 
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="#cont">Контакты</a></li>
         </ul>
+      </nav>
 
+      <ul>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
-        <section>
-            <div>
-                <h2>Эффективные решения для вашего бизнеса</h2>
-                <button type="button">Заказать услугу</button>
-            </div>
+      <section>
+        <div>
+          <h2>Эффективные решения для вашего бизнеса</h2>
+          <button type="button">Заказать услугу</button>
+        </div>
+      </section>
 
-        </section>
+      <!-- Особенности-->
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <img src="./images/antenna 1.svg" alt="" />
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
 
-        <!-- Особенности-->
-        <section>
-            <h2>Особенности</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
+          <li>
+            <h3>Пунктуальность</h3>
+            <img src="./images/clock 1.svg" alt="" />
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
 
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
+          <li>
+            <h3>Планирование</h3>
+            <img src="./images/diagram 1.svg" alt="" />
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
 
-                <li>
-                    <h3>Пунктуальность</h3>
+          <li>
+            <h3>Современные технологии</h3>
+            <img src="./images/astronaut 1.svg" alt="" />
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
 
-                <li>
-                    <h3>Планирование</h3>
+        <ul>
+          <li>
+            <p>Десктопные приложения</p>
+            <img src="./images/img1.jpg" alt="we do" width="370" />
+          </li>
 
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
+          <li>
+            <p>Мобильные приложения</p>
+            <img src="./images/img2.jpg" alt="we do" width="370" />
+          </li>
 
-                <li>
-                    <h3>Современные технологии</h3>
+          <li>
+            <p>Дизайнерские решения</p>
+            <img src="./images/img3.jpg" alt="we do" width="370" />
+          </li>
+        </ul>
+      </section>
 
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
+      <!--Команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/team1.jpg" alt="our team" width="270" />
+            <p>Игорь Демьяненко</p>
+            <p>Product Designer</p>
+          </li>
 
-            </ul>
+          <li>
+            <img src="./images/team2.jpg" alt="our team" width="270" />
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p>
+          </li>
 
-        </section>
+          <li>
+            <img src="./images/team3.jpg" alt="our team" width="270" />
+            <p>Николай Тарасов</p>
+            <p>Marketing</p>
+          </li>
 
-        <!--Чем мы занимаемся-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-
-            <ul>
-                <li>
-                    <a href="/">
-                        <img src="./images/img1.jpg" alt="we do" width="370">
-                    </a>
-                </li>
-
-                <li>
-                    <a href="/">
-                        <img src="./images/img2.jpg" alt="we do" width="370">
-                    </a>
-                </li>
-
-                <li>
-                    <a href="/">
-                        <img src="./images/img3.jpg" alt="we do" width="370">
-                    </a>
-                </li>
-            </ul>
-        </section>
-
-        <!--Команда-->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/team1.jpg" alt="our team" width="270">
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
-                </li>
-
-                <li>
-                    <img src="./images/team2.jpg" alt="our team" width="270">
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
-                </li>
-
-                <li>
-                    <img src="./images/team3.jpg" alt="our team" width="270">
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
-                </li>
-
-                <li>
-                    <img src="./images/team4.jpg" alt="our team" width="270">
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
-                </li>
-
-            </ul>
-
-        </section>
-
+          <li>
+            <img src="./images/team4.jpg" alt="our team" width="270" />
+            <p>Михаил Ермаков</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
+      <a href="index.html">
+        <p>webstudio</p>
+      </a>
 
-        <a href="index.html">
-            <p>webstudio</p>
-        </a>
-
-
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="/">info@devstudio.com</a>
-        <a href="/">+38 096 111 11 11</a>
-
-
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a id="cont" href="/">info@devstudio.com</a>
+      <a href="/">+38 096 111 11 11</a>
     </footer>
-</body>
-
+  </body>
 </html>
